[gd_scene load_steps=3 format=3 uid="uid://vrrji0n1ob8s"]

[ext_resource type="PackedScene" uid="uid://d06d2btposubl" path="res://LayoutSheet.tscn" id="1_layout_sheet"]
[ext_resource type="Script" uid="uid://evofopvy2fdv" path="res://layout_test_controller.gd" id="2_controller"]

[node name="LayoutTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_controller")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LayoutSheet" parent="ScrollContainer" instance=ExtResource("1_layout_sheet")]
layout_mode = 2

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PaperSizeOption" type="OptionButton" parent="UI/Toolbar"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "A3 Landscape"
popup/item_0/id = 0
popup/item_1/text = "A3 Portrait"
popup/item_1/id = 1
popup/item_2/text = "A4 Landscape"
popup/item_2/id = 2
popup/item_3/text = "A4 Portrait"
popup/item_3/id = 3
popup/item_4/text = "A2 Landscape"
popup/item_4/id = 4
popup/item_5/text = "A2 Portrait"
popup/item_5/id = 5

[node name="AddViewportBtn" type="Button" parent="UI/Toolbar"]
layout_mode = 2
text = "Add TOP View"

[node name="AddFrontBtn" type="Button" parent="UI/Toolbar"]
layout_mode = 2
text = "Add FRONT View"

[node name="AddIsoBtn" type="Button" parent="UI/Toolbar"]
layout_mode = 2
text = "Add ISO View"

[node name="ClearBtn" type="Button" parent="UI/Toolbar"]
layout_mode = 2
text = "Clear All"

[node name="ExportBtn" type="Button" parent="UI/Toolbar"]
layout_mode = 2
text = "Export SVG"

[connection signal="item_selected" from="UI/Toolbar/PaperSizeOption" to="." method="_on_paper_size_selected"]
[connection signal="pressed" from="UI/Toolbar/AddViewportBtn" to="." method="_on_add_top_view"]
[connection signal="pressed" from="UI/Toolbar/AddFrontBtn" to="." method="_on_add_front_view"]
[connection signal="pressed" from="UI/Toolbar/AddIsoBtn" to="." method="_on_add_iso_view"]
[connection signal="pressed" from="UI/Toolbar/ClearBtn" to="." method="_on_clear_all"]
[connection signal="pressed" from="UI/Toolbar/ExportBtn" to="." method="_on_export_svg"]
